feat: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
     </header>
     <footer>
         <div class="links">
-            <a href="#" class="links__icon">Instagram</a>
-            <a href="#" class="links__icon">Facebook</a>
-            <a href="#" class="links__icon">Shutterstock</a>
+            <a href="#" class="links__icon"><img src="./style/icons/facebook.png" /></a>
+            <a href="#" class="links__icon"><img src="./style/icons/instagram.png" /></a>
+            <a href="#" class="links__icon"><img src="./style/icons/shutterstock.png" /></a>
         </div>
     </footer>
 </body>
