feat: add links into footer icons

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div></div>
+    </main>
     <footer>
         <div class="links">
-            <a href="#" class="links__icon"><img src="./style/icons/facebook.png" /></a>
-            <a href="#" class="links__icon"><img src="./style/icons/instagram.png" /></a>
-            <a href="#" class="links__icon"><img src="./style/icons/shutterstock.png" /></a>
+            <a href="https://www.facebook.com/alenaredchanka" class="links__icon" target="_blank"><img src="./style/icons/facebook.png" /></a>
+            <a href="https://www.instagram.com/elena_photo_book" class="links__icon" target="_blank"><img src="./style/icons/instagram.png" /></a>
+            <a href="https://www.shutterstock.com/g/redchanka?_gl=1*1asmckj*_ga*OTM0NDA2NTQ4LjE2OTk4MTk2Mjg.*_ga_5JRYE4Y8J9*MTY5OTgxOTYyOC4xLjEuMTY5OTgxOTczNS40My4wLjA.*_fplc*V1VDdU5ueWlXQmxOZUhrRG5mMFJEQW9jNklER1B0N0JHZXVNSG5Lb3dYS3Uwd0JqdUpqdzJoRmtqRWEwOTJHeldkOUhZYkw1b1RRb1VveDFlQ3d1WFFjeWlRTFRvMCUyRklYUjhCa0Y1c1hhZ3NjNG5JTW1VZWllY0NDOVMyd3clM0QlM0Q" class="links__icon" target="_blank"><img src="./style/icons/shutterstock.png" /></a>
         </div>
     </footer>
 </body>
