--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,20 @@
         </nav>
     </header>
     <main>
-        <div></div>
+        <div class="photo-container">
+            <a href="#" class="photo-container__item"><img src="./style/img/11746_zakat-v-toskane.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/1579343025_13-28.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/1920x1200_732241_[www.ArtFile.ru].jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/1920x1280-px-Bali-clouds-field-Indonesia-landscape-mist-mountain-nature-rice-paddy-sky-sunset-terraces-valley-663216.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/1de97f1b6f9f3b2fdfbb4ca6908d674b.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/249462.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/2560x1600_ocean-tropical-palm-coast-sunset-sky.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/2880x1800.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/344941-svetik_2048x1152.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/349507-svetik.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/352307-admin_1920x1200.jpg" /></a>
+            <a href="#" class="photo-container__item"><img src="./style/img/489844_download-wallpapers-3840x2160-australia-melbourne-skyscrapers_3840x2160_h.jpg" /></a>
+        </div>
     </main>
     <footer>
         <div class="links">
