--- a/src/index.html
+++ b/src/index.html
@@ -7,33 +7,6 @@
     <title>Elena Redchenko</title>
 </head>
 <body>
-    <div class="temp-modal-window">
-        <div class="confetti">
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-            <div class="confetti-piece"></div>
-        </div>
-        <div class="temp-modal-window__img">
-            <div style="padding-top:55.400%;position:relative;"><iframe src="https://gifer.com/embed/JoC" width="400px" height="150px" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div><p><a href="https://gifer.com"></a></p>
-            <img src="./style/img/temp/Studio Ghibli.gif" class="cats-gif">
-            <p class="p-1">Happy Birthday!</p>
-            <img src="./style/img/temp/20230122_173617.jpg" class="happy-img">
-            <p class="p-2">Happy Birthday!</p>
-            <div class="totoro-first" style="padding-top:100.000%;position:relative;"><iframe src="https://gifer.com/embed/3vwb" width="150px" height="150px" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div><p><a href="https://gifer.com"></a></p>
-            <p class="p-3">Made with love ♡♡♡</p>
-            <div class="totoro-second" style="padding-top:100.000%;position:relative;"><iframe src="https://gifer.com/embed/3vwb" width="150px" height="150px" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div><p><a href="https://gifer.com"></a></p>
-        </div>
-    </div>
     <header>
         <a href="#" class="header__main-page-link">ELENA REDCHENKO</a>
         <nav>
@@ -49,18 +22,90 @@
     </header>
     <main>
         <div class="photo-container">
-            <a href="#" class="photo-container__item"><img src="./style/img/11746_zakat-v-toskane.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/1579343025_13-28.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/1920x1200_732241_[www.ArtFile.ru].jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/1920x1280-px-Bali-clouds-field-Indonesia-landscape-mist-mountain-nature-rice-paddy-sky-sunset-terraces-valley-663216.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/1de97f1b6f9f3b2fdfbb4ca6908d674b.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/249462.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/2560x1600_ocean-tropical-palm-coast-sunset-sky.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/2880x1800.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/344941-svetik_2048x1152.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/349507-svetik.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/352307-admin_1920x1200.jpg" /></a>
-            <a href="#" class="photo-container__item"><img src="./style/img/489844_download-wallpapers-3840x2160-australia-melbourne-skyscrapers_3840x2160_h.jpg" /></a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/11746_zakat-v-toskane.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/1579343025_13-28.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/1920x1200_732241_[www.ArtFile.ru].jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/1920x1280-px-Bali-clouds-field-Indonesia-landscape-mist-mountain-nature-rice-paddy-sky-sunset-terraces-valley-663216.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/1de97f1b6f9f3b2fdfbb4ca6908d674b.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/249462.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/2560x1600_ocean-tropical-palm-coast-sunset-sky.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/2880x1800.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/344941-svetik_2048x1152.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/349507-svetik.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/352307-admin_1920x1200.jpg" />
+            </a>
+            <a href="#" class="photo-container__item">
+                <div class="photo-container__hover-overlay">
+                    <p class="collection-name">Photoshoot</p>
+                    <p class="collection-year">2024</p>
+                </div>
+                <img src="./style/img/489844_download-wallpapers-3840x2160-australia-melbourne-skyscrapers_3840x2160_h.jpg" />
+            </a>
         </div>
     </main>
     <footer>
