feat: add Contact page

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#" class="menu__link">Beauty</a></li>
                 <li><a href="#" class="menu__link">Commercial</a></li>
                 <li><a href="#" class="menu__link">Travel</a></li>
-                <li><a href="#" class="menu__link">Contact</a></li>
+                <li><a href="contact-page.html" class="menu__link">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -115,6 +115,5 @@
             <a href="https://www.linkedin.com/in/alena-redchanka-62341723b/" class="links__icon" target="_blank"><img src="./style/icons/linkedin.png" /></a>
         </div>
     </footer>
-    <script src="./index.js"></script>
 </body>
 </html>
