feat: add footer links animation

--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -27,11 +27,11 @@
             <img src="./style/img/contact-img/IMG_2635.jpg" alt="Elena Redchenko photo">
         </div>
         <div class="contact-text-container">
-            <p>I'm a freelancer photographer/retoucher with background of work with professional team in photo studio.</p>
+            <p>I'm a freelancer photographer/retoucher with a background of work with professional team in photo studio.</p>
             <p>I have nice experience with travels all around the world and have been working in different styles of photoshoots mostly fashion, beauty, advertising.
                 Also I like communicate with beauty of nature.</p>
-            <p>And my second direction professional photoshooting of real estate.</p>
-            <p>I'm a friendly, responsible, reliable and flexible artist who always open for creative ideas, for work in team and for realize new project all around the world. </p>
+            <p>And my second direction is professional photoshooting of real estate.</p>
+            <p>I'm a friendly, responsible, reliable and flexible artist who's always open for creative ideas, for work in a team and for realization of new projects all around the world. </p>
         </div>
         <div class="contact-info-container">
             <p class="contact-info">+48 510 138 614</p>
