feat: change Main page gallery grid

--- a/src/index.html
+++ b/src/index.html
@@ -22,90 +22,96 @@
     </header>
     <main>
         <div class="photo-container">
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/contact-img/IMG_20230115_233321_105.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/1579343025_13-28.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/contact-img/IMG_2635.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/1920x1280-px-Bali-clouds-field-Indonesia-landscape-mist-mountain-nature-rice-paddy-sky-sunset-terraces-valley-663216.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/1de97f1b6f9f3b2fdfbb4ca6908d674b.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/249462.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/2560x1600_ocean-tropical-palm-coast-sunset-sky.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/2880x1800.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/344941-svetik_2048x1152.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/349507-svetik.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/352307-admin_1920x1200.jpg" />
-            </a>
-            <a href="#" class="photo-container__item">
-                <div class="photo-container__hover-overlay">
-                    <p class="collection-name">Photoshoot</p>
-                    <p class="collection-year">2024</p>
-                </div>
-                <img src="./style/img/489844_download-wallpapers-3840x2160-australia-melbourne-skyscrapers_3840x2160_h.jpg" />
-            </a>
+            <div class="photo-container__column">
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/contact-img/IMG_20230115_233321_105.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/1920x1280-px-Bali-clouds-field-Indonesia-landscape-mist-mountain-nature-rice-paddy-sky-sunset-terraces-valley-663216.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/1de97f1b6f9f3b2fdfbb4ca6908d674b.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/249462.jpg" />
+                </a>
+            </div>
+            <div class="photo-container__column">
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/1579343025_13-28.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/contact-img/IMG_2834.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/2880x1800.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/344941-svetik_2048x1152.jpg" />
+                </a>
+            </div>
+            <div class="photo-container__column">
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/contact-img/IMG_2635.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/349507-svetik.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/352307-admin_1920x1200.jpg" />
+                </a>
+                <a href="#" class="photo-container__item">
+                    <div class="photo-container__hover-overlay">
+                        <p class="collection-name">Photoshoot</p>
+                        <p class="collection-year">2024</p>
+                    </div>
+                    <img src="./style/img/489844_download-wallpapers-3840x2160-australia-melbourne-skyscrapers_3840x2160_h.jpg" />
+                </a>
+            </div>
         </div>
     </main>
     <footer>
