fix: add links to Categorie and Contact pages

--- a/src/categorie-page.html
+++ b/src/categorie-page.html
@@ -12,12 +12,12 @@
         <a href="index.html" class="header__main-page-link">ELENA REDCHENKO</a>
         <nav>
             <ul class="menu">
-                <li><a href="#" class="menu__link">Portrait</a></li>
-                <li><a href="#" class="menu__link">Fashion</a></li>
-                <li><a href="#" class="menu__link">Beauty</a></li>
-                <li><a href="#" class="menu__link">Commercial</a></li>
-                <li><a href="#" class="menu__link">Travel</a></li>
-                <li><a href="#" class="menu__link">Contact</a></li>
+                <li><a href="categorie-page.html" class="menu__link">Portrait</a></li>
+                <li><a href="categorie-page.html" class="menu__link">Fashion</a></li>
+                <li><a href="categorie-page.html" class="menu__link">Beauty</a></li>
+                <li><a href="categorie-page.html" class="menu__link">Commercial</a></li>
+                <li><a href="categorie-page.html" class="menu__link">Travel</a></li>
+                <li><a href="contact-page.html" class="menu__link">Contact</a></li>
             </ul>
         </nav>
     </header>
