--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -17,7 +17,7 @@
                 <li><a href="categorie-page.html" class="menu__link">Beauty</a></li>
                 <li><a href="categorie-page.html" class="menu__link">Commercial</a></li>
                 <li><a href="categorie-page.html" class="menu__link">Travel</a></li>
-                <li><a href="categorie-page.html" class="menu__link">Contact</a></li>
+                <li><a href="contact-page.html" class="menu__link">Contact</a></li>
             </ul>
         </nav>
     </header>
