feat: add responsive font

--- a/src/categorie-page.html
+++ b/src/categorie-page.html
@@ -34,7 +34,7 @@
                         <p class="collection-name">Photoshoot</p>
                         <p class="collection-year">2024</p>
                     </div>
-                    <img src="./style/img/categorie-page/IMG_20220720_211328_563.jpg" />
+                    <img src="./style/img/photo_1.jpg" />
                 </a>
                 <a href="photoshoot-page.html" class="photo-container__item">
                     <div class="photo-container__hover-overlay">
@@ -122,7 +122,7 @@
                         <p class="collection-name">Photoshoot</p>
                         <p class="collection-year">2024</p>
                     </div>
-                    <img src="./style/img/categorie-page/IMG_20220723_010632_372.jpg" />
+                    <img src="./style/img/categorie-page/photo_1.jpg" />
                 </a>
                 <a href="photoshoot-page.html" class="photo-container__item">
                     <div class="photo-container__hover-overlay">
@@ -143,7 +143,7 @@
                         <p class="collection-name">Photoshoot</p>
                         <p class="collection-year">2024</p>
                     </div>
-                    <img src="./style/img/categorie-page/20220727_162708.jpg" />
+                    <img src="./style/img/categorie-page/photo_2.jpg" />
                 </a>
             </div>
         </div>
