--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                         <p class="collection-name">Photoshoot</p>
                         <p class="collection-year">2024</p>
                     </div>
-                    <img src="./style/img/contact-img/IMG_20230115_233321_105.jpg" />
+                    <img src="./style/img/categorie-page/photo_3.jpg" />
                 </a>
                 <a href="photoshoot-page.html" class="photo-container__item">
                     <div class="photo-container__hover-overlay">
@@ -65,7 +65,7 @@
                         <p class="collection-name">Photoshoot</p>
                         <p class="collection-year">2024</p>
                     </div>
-                    <img src="./style/img/contact-img/IMG_2834.jpg" />
+                    <img src="./style/img/photo_2.jpg" />
                 </a>
                 <a href="photoshoot-page.html" class="photo-container__item">
                     <div class="photo-container__hover-overlay">
