--- a/src/photoshoot-page.html
+++ b/src/photoshoot-page.html
@@ -17,7 +17,7 @@
                 <li><a href="categorie-page.html" class="menu__link">Beauty</a></li>
                 <li><a href="categorie-page.html" class="menu__link">Commercial</a></li>
                 <li><a href="categorie-page.html" class="menu__link">Travel</a></li>
-                <li><a href="categorie-page.html" class="menu__link">Contact</a></li>
+                <li><a href="contact-page.html" class="menu__link">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -33,11 +33,12 @@
             <img src="style/img/photoshoot-img/IMG_0136.jpg" alt="village photoshoot" class="vertical-photo">
             <img src="style/img/photoshoot-img/IMG_0537.jpg" alt="village photoshoot" class="vertical-photo">
             <img src="style/img/photoshoot-img/IMG_0409.jpg" alt="village photoshoot" class="horizontal-photo">
-            <img src="style/img/photoshoot-img/IMG_0314.jpg" alt="village photoshoot" class="vertical-photo">
-            <img src="style/img/photoshoot-img/IMG_0390.jpg" alt="village photoshoot" class="vertical-photo">
-            <img src="style/img/photoshoot-img/IMG_0421.jpg" alt="village photoshoot" class="horizontal-photo">
-            <img src="style/img/photoshoot-img/IMG_0499.jpg" alt="village photoshoot" class="vertical-photo">
-            <img src="style/img/photoshoot-img/IMG_0167.jpg" alt="village photoshoot" class="vertical-photo">
+            <img src="style/img/photoshoot-img/IMG_0136.jpg" alt="village photoshoot" class="vertical-photo">
+            <img src="style/img/photoshoot-img/IMG_0537.jpg" alt="village photoshoot" class="vertical-photo">
+            <img src="style/img/photoshoot-img/IMG_0409.jpg" alt="village photoshoot" class="horizontal-photo">
+            <img src="style/img/photoshoot-img/IMG_0136.jpg" alt="village photoshoot" class="vertical-photo">
+            <img src="style/img/photoshoot-img/IMG_0537.jpg" alt="village photoshoot" class="vertical-photo">
+            <img src="style/img/photoshoot-img/IMG_0409.jpg" alt="village photoshoot" class="horizontal-photo">        
         </div>
     </main>
     <footer>
